--- a/index.html
+++ b/index.html
@@ -5,50 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Security Breach Anomaly</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap');
-        
         body {
             background-color: #000;
             color: #fff;
-            font-family: 'Orbitron', sans-serif;
+            font-family: Arial, sans-serif;
             text-align: center;
             padding: 50px;
         }
         h1 {
-            font-size: 48px;
+            font-size: 36px;
             text-transform: uppercase;
-            text-shadow: 0 0 10px #0ff, 0 0 20px #0ff;
+            letter-spacing: 2px;
+            color: #0ff;
         }
         p {
-            font-size: 20px;
-            text-shadow: 0 0 5px #0ff;
-        }
-        .container {
-            max-width: 800px;
-            margin: auto;
-        }
-        .button {
-            display: inline-block;
-            margin-top: 20px;
-            padding: 10px 20px;
             font-size: 18px;
-            color: #000;
-            background: #0ff;
-            border: none;
-            cursor: pointer;
-            transition: 0.3s;
+            max-width: 600px;
+            margin: 0 auto 20px;
         }
-        .button:hover {
-            background: #08d;
-            text-shadow: 0 0 10px #fff;
+        .contact {
+            margin-top: 30px;
+            font-size: 20px;
+        }
+        .contact a {
+            color: #0ff;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .contact a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Security Breach Anomaly</h1>
-        <p>Elitarna grupa ochroniarska działająca w cieniu.</p>
-        <button class="button" onclick="location.href='contact.html'">Kontakt</button>
+    <h1>Security Breach Anomaly</h1>
+    <p>Elitarna jednostka ochrony. Profesjonalizm, dyskrecja, skuteczność. Oferujemy ochronę osób, domów oraz powierzonych obiektów.</p>
+    <p>Nie zostawiamy miejsca na błędy – jesteśmy tam, gdzie nas potrzebujesz.</p>
+    <div class="contact">
+        <p>Kontakt:</p>
+        <p>📞 Telefon: +48 123 456 789</p>
+        <p>📧 E-mail: <a href="mailto:kontakt@sba-ochrona.pl">kontakt@sba-ochrona.pl</a></p>
     </div>
 </body>
 </html>
